--- a/MTGExplorer/Pages/Index.cshtml
+++ b/MTGExplorer/Pages/Index.cshtml
@@ -6,5 +6,14 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <form method="post">
+        <input id="text" type="text" />
+        <input type="button" value="Search" onclick="search();" />
+    </form>
 </div>
+<script>
+    var search = function () {
+        var search = document.getElementById('text');
+        window.location = "/Search?text=" + search.value;
+    }
+</script>
